upgrade to Java 11